--- a/CTRural/app/build.gradle
+++ b/CTRural/app/build.gradle
@@ -47,4 +47,8 @@ dependencies {
     //lifecycle
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycle_version"
+
+    //materialdesign
+    implementation 'com.google.android.material:material:1.2.0-rc01'
+
 }
